[project]
name = "birthday-paradox"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "chrisandrews1012", email = "171823942+chrisandrews1012@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.9",
    "networkx>=3.6.1",
    "numpy>=2.4.4",
    "plotly>=6.7.0",
    "streamlit>=1.57.0",
]

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"
